Fix publication button spacing (#1322)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1640,6 +1640,7 @@ ninja-keys::part(ninja-input-wrapper) {
           padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
+          margin-left: 0;
 
           &:hover {
             color: var(--global-theme-color);
@@ -1649,11 +1650,12 @@ ninja-keys::part(ninja-input-wrapper) {
       }
 
       .badges {
+        padding-bottom: 0.5rem;
         span {
           display: inline-block;
           color: $black-color;
           height: 100%;
-          padding-left: 0.5rem;
+          padding-right: 0.5rem;
           vertical-align: middle;
 
           &:hover {
